[package]
name = "Garden_lights"
version = "0.1.0"
authors = ["bestman8 <35968731+bestman8@users.noreply.github.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "Garden_lights"
harness = false        # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []


experimental = ["esp-idf-svc/experimental"]
[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.49", features = [
    "std",
    "embassy-time-driver",
    "embassy-sync",
] }
toml-cfg = "*"
esp-idf-hal = "*"
embedded-svc = "0.28.0"
anyhow = "1"
# embassy-time-driver = { version = "*", features = ["critical-section"] }esp-idf-hal = { version = "*" }
# tokio = "*" 
smol = "*"
futures-lite = "2.5.0"
postcard = "1.1.1"
serde = "1.0.217"
time = {version ="0.3.37", features = ["serde","formatting" ]}
chrono-tz = "0.10.0"
chrono = "0.4.39"
[build-dependencies]
embuild = "0.32.0"
cc = "=1.1.30"     # Necessary until a new version of `esp-idf-sys` is released
toml-cfg = "*"
