[package]
name = "Garden_lights"
version = "0.1.0"
authors = ["bestman8 <35968731+bestman8@users.noreply.github.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "Garden_lights"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"
lto = "thin"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
postcard = "1.1.1"
serde = "1.0.217"
# time = {version ="0.3.37", features = ["serde","formatting" ]}
chrono-tz = "0.10.0"
chrono = "0.4.39"
toml-cfg = "*"
esp-idf-hal = "*"
crossbeam = "0.8.4"

[build-dependencies]
embuild = "0.33"

[build]
rustflags = ["-Z", "threads=12"]